2005-06-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.ac: bump version to 0.6

2005-06-09  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* ltmain.sh: update from libtool-1.5.18.
	* compile, depcomp, install-sh, missing, mkinstalldirs: Update
	from automake-1.9.5.

2005-06-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_source_zip.c (zip_source_zip): if reading uncompressed,
	set crc in stat buffer to 0.

	* lib/zip_close.c (ch_set_error): use ZIP_SOURCE_ERROR to get
	error code from source callback.
	
	* regress/Makefile.am: add srcdir to TESTS_ENVIRONMENT.
	* regress/mkname.c, regress/mkname.h: add.
	* regress/fread.c, regress/name_locate.c, regress/open.c: use
	mkname.

	* man/Makefile.am: fix DESTDIR support and uninstall.
	
2005-01-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_get_name.c (_zip_get_name): return ZIP_ER_DELETED for
	deleted entries if ZIP_FL_UNCHANGED isn't set.

2005-01-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/zip_name_locate.c (_zip_name_locate): fix ZIP_FL_NODIR;
	also follow appnote.txt and only accept forward slashes as
	directory separators.

2005-01-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_fopen_index.c (zip_fopen_index), lib/zip_fread.c
	(zip_fread), lib/zip_fclose.c (zip_fclose): fix CRC checking for
	stored files.
	
	* lib/zip_new.c (_zip_new): init error.

	* lib/zip_error.c (_zip_error_get): set system error to 0 for
	ZIP_ET_NONE.

	* lib/zip_open.c (_zip_memdup): make static, use size_t for size
	argument, add error argument for passing error code back to
	caller.
	* lib/zip_open.c (_zip_readcdir): error out if _zip_memdup
	failes.
	
2004-12-28  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_free.c (_zip_free): correctly set error of open
	files to ZIP_ER_ZIPCLOSED.

2004-12-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h: rename zip_read_func to zip_source_callback, struct
	zip_cmd to struct zip_source_cmd, and ZIP_CMD_* to ZIP_SOURCE_*;